<resources>
    <string name="app_name">BikeRent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MAIN ACTIVITY -->
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- DRAWER ACTIVITY -->
    <string name="drawer_rent">Rent</string>
    <string name="drawer_gallery">Gallery</string>
    <string name="drawer_slideshow">Slideshow</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_about">About</string>

    <!-- LOGIN ACTIVITY -->
    <string name="tv_login_username">Username</string>
    <string name="tv_login_password">Password</string>
    <string name="pd_login_msg">Sto eseguendo l\'accesso..</string>
    <string name="pd_login_failed">Login fallito..</string>
    <string name="pd_login_error">C\'è stato un errore nella connessione. Riprovare più tardi,</string>

    <!-- SLIDE_REGISTRATION ACTIVITY -->
    <string name="tv_reg_name">Nome</string>
    <string name="tv_reg_surname">Cognome</string>
    <string name="tv_reg_phone">Telefono</string>
    <string name="tv_reg_rules">Ho letto il regolamento</string>
    <string name="rb_reg_male">Uomo</string>
    <string name="rb_reg_female">Donna</string>
    <string name="bt_reg_submit">Registrati</string>
    <string name="tv_reg_already">Sei già registrato?</string>

    <!-- LOGIN ACTIVITY -->
    <string name="tv_login_pass_forgotten">Hai dimendicato la password?</string>
    <string name="tv_popup_pass">Inserisci l e-mail di iscrizione, riceverai una nuova password cliccando il link presente nell mail.</string>

    <!-- ABOUT ACTIVITY -->
    <string name="lbl_about">License</string>
    <string name="copyright">All rights reserved - © copyright 2016</string>
    <string name="Note">This program is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation.
This program is distributed in the hope that it will be useful.</string>

    <!-- CONTENT_PROFILE ACTIVITY -->
    <string name="label_account_surname">Cognome</string>
    <string name="label_account_name">Nome</string>
    <string name="label_cellulare">Cellulare</string>
    <string name="label_gender">Genere</string>
    <string name="label_email">Email</string>
    <string name="account_name">dave</string>
    <string name="account_surname">iengo</string>
    <string name="account_cellulare">3929224903</string>
    <string name="account_email">davide.iengo@hotmail.it</string>
    <string name="account_save">Salva</string>
    <string name="profile_label">PROFILE</string>
    <string name="info_label">Information</string>
    <string name="account_bike_num">Bike Num</string>
    <string name="account_price">Price</string>
    <string name="account_num_ord">N.1</string>
    <string name="account_time">Tempo Richiesto</string>
    <string name="btnCancPopup">Annulla</string>
    <string name="btnOkPopup">OK</string>
    <string name="pd_query_failed">Errore query:</string>
    <string name="pd_fill_field">Riempire i campi correttamente.</string>
    <string name="reset_mail_inp">ERROR: your email is not present!</string>
    <string name="reset_working">Wait, we\'are sending the reset link to your email</string>
    <string name="reset_mail_ok">Email sent. Please check the reset link</string>
</resources>
