<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rent"
            android:icon="@drawable/ic_rent_drawer"
            android:title="@string/drawer_rent" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_slideshow" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_drawer"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black"
            android:title="@string/drawer_about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_bug"
                android:icon="@drawable/ic_bug_report_black_24px"
                android:title="Report Bugs" />
        </menu>
    </item>
</menu>