<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iengos.bikerent.home"
    android:id="@+id/content">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:columnCount="9"
        android:rowCount="8"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:text="@string/profile_label"
            android:id="@+id/profileLabel"
            android:layout_columnSpan="9"
            android:layout_rowSpan="1"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="5dp"
            android:background="#AAA"
            android:layout_columnSpan="9"
            android:layout_rowSpan="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:textSize="10dp"
            android:text="@string/label_account_name"
            android:id="@+id/labelAccountName"
            android:textAllCaps="true"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:gravity="left"
            android:textSize="10dp"
            android:text="@string/label_account_surname"
            android:id="@+id/labelAccountSurname"
            android:textAllCaps="true"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_account_circle_black"
            app:civ_border_color="#EEE"
            app:civ_shadow="true"
            app:civ_shadow_radius="2"
            app:civ_shadow_color="#AAA"
            android:layout_columnSpan="5"
            android:layout_rowSpan="4"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:text="@string/account_name"
            android:textColor="#222"
            android:textSize="16dp"
            android:id="@+id/accountName"
            android:inputType="textCapSentences"
            android:background="@null"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:gravity="left"
            android:text="@string/account_surname"
            android:textColor="#222"
            android:textSize="16dp"
            android:id="@+id/accountSurname"
            android:inputType="textCapSentences"
            android:background="@null"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:textSize="10dp"
            android:text="@string/label_cellulare"
            android:id="@+id/labelCellulare"
            android:textAllCaps="true"
            android:layout_columnSpan="4"
            android:layout_rowSpan="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:textColor="#222"
            android:textSize="16dp"
            android:text="@string/account_cellulare"
            android:id="@+id/AccountCellulare"
            android:background="@null"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:textSize="10dp"
            android:text="@string/label_email"
            android:id="@+id/labelEmail"
            android:textAllCaps="true"
            android:layout_columnSpan="9"
            android:layout_rowSpan="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:textColor="#222"
            android:textSize="16dp"
            android:text="@string/account_email"
            android:id="@+id/AccountEmail"
            android:background="@null"
            android:layout_columnSpan="9"
            android:layout_rowSpan="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:textSize="10dp"
            android:text="@string/label_gender"
            android:id="@+id/labelGender"
            android:textAllCaps="true"
            android:layout_columnSpan="9"
            android:layout_rowSpan="1"/>

        <RadioGroup
            android:id="@+id/radioGenere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:layout_columnSpan="9"
            android:layout_rowSpan="1">

            <RadioButton
                android:id="@+id/Female"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_reg_female" />

            <RadioButton
                android:id="@+id/Male"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_reg_male" />
        </RadioGroup>

        <Button
            android:id="@+id/AccountSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="salva"
            android:layout_columnSpan="9"
            android:layout_rowSpan="1"
            android:text="@string/account_save" />

    </GridLayout>

</FrameLayout>

