<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/PopupRegolamento"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#e2e2e2"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_popup_pass"
        android:gravity="center"
        android:textColor="#000"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:maxLines="1"
        android:layout_marginTop="25dp"
        android:inputType="textCapSentences"
        android:gravity="left"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/btnOkpupop"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOkPopup"
            android:onClick="sendEmailPass"/>

        <Button
            android:id="@+id/btnCancelpupop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancPopup"
            android:onClick="cancelEmailPass"/>

    </LinearLayout>
</LinearLayout>