<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iengos.bikerent.home"
    android:id="@+id/content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/LblLicense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textSize="25dp"
            android:text="@string/lbl_about"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"/>

        <TextView
            android:id="@+id/Note"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:textSize="15dp"
            android:textColor="#555"
            android:text="@string/Note"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"/>

        <TextView
            android:id="@+id/Copyright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:textSize="15dp"
            android:textColor="#555"
            android:text="@string/copyright"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"/>
    </LinearLayout>
</FrameLayout>